k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssemtle
  namespace: apps
spec:
  selector: { app: ssemtle }
  ports:
    - port: 80
      targetPort: 3000
