k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssemtle
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ssemtle.com
        - ssemtle.orioriori.duckdns.org
      secretName: ssemtle-tls
  rules:
    - host: ssemtle.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: ssemtle, port: { number: 80 } } }
    - host: ssemtle.orioriori.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: ssemtle, port: { number: 80 } } }
